--- a/css/styles.css
+++ b/css/styles.css
@@ -516,6 +516,11 @@ img {
 
 .footer-call {
   padding-top: 72px;
+  margin-right: 94px;
+}
+
+.form {
+  padding-top: 72px;
 }
 
 .call {
@@ -560,6 +565,30 @@ img {
 .footer-mail-link,
 .footer-tel-link {
   color: var(--text-light-color);
+}
+
+.subscribe-button {
+  font-family: var(--main-font);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  padding: 10px 28px 10px 29px;
+  background-color: var(--accent-color);
+  width: 200px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+
+  letter-spacing: 0.06em;
+  color: var(--title-light-color);
+  color: #ffffff;
+  border-radius: 4px;
+  border: none;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.icon-send {
+  margin-left: 10px;
 }
 
 /* СТРАНИЦА ПОРТФОЛИО */
